projects/stencil/src/components/mds-banner/mds-banner.css
@tailwind utilities;

:host {

  /**
    * @prop --background: Sets the background-color of the component
    * @prop --radius: Sets the border-radius of the component
    * @prop --color: Sets the text color of the component
    * @prop --shadow: Sets the box-shadow of the component
    * @prop --icon-color: Sets the close icon color of the component
    */

  --background: theme('colors.adjust-tone-10');
  --color: theme('colors.adjust-tone-02');
  --icon-color: theme('colors.adjust-tone-04');
  --radius: theme('borderRadius.lg');
  --shadow: none;

  @apply
    grid
    transition-cosmetic;

  background-color: var(--background);
  border-radius: var(--radius);
  box-shadow: var(--shadow);
  color: var(--color);
}

.header {
  @apply
    flex
    gap-4
    items-center
    pt-6
    px-6;
}

.header .close-icon {
  @apply shrink-0;
}

.headline {
  @apply flex-grow;
}

.content {
  @apply
    flex
    gap-4
    items-start
    p-6;
}

.content--has-icon-isolated {
  @apply
    pr-16
    relative;
}

.header + .content {
  @apply pt-4;
}

:host ( .has-actions ) .content {
  @apply pb-0;
}

.close-icon--isolated {
  @apply
    absolute
    right-6
    top-6;
}

.actions {
  @apply
    flex
    flex-wrap
    gap-4
    justify-end
    p-6;
}

.close-icon {
  @apply
    bg-adjust-tone
    bg-opacity-0
    cursor-pointer
    p-1
    rounded-md
    transition-colors;
}

.close-icon:hover {
  @apply bg-opacity-50;
}

.icon {
  color: var(--icon-color);
}

.text {
  @apply
    gap-2
    grid
    grow;
}

@import './css/mds-banner-variant-dark.css';
@import './css/mds-banner-variant-error.css';
@import './css/mds-banner-variant-info.css';
@import './css/mds-banner-variant-light.css';
@import './css/mds-banner-variant-primary.css';
@import './css/mds-banner-variant-success.css';
@import './css/mds-banner-variant-warning.css';

